--- a/enhancement/testclass.ipynb
+++ b/enhancement/testclass.ipynb
@@ -1197,7 +1197,7 @@
    "cell_type": "code",
    "execution_count": 96,
    "source": [
-    "sku_worker_matrix(8,9,2021) #workers, month,year to generate dropzone_workers_productivity\r\n",
+    "sku_worker_matrix(8,9,2021) #workers, month,year to generate dropzone_workers_productivity and final optimisation result \r\n",
     "sku_worker_matrix(10,9,2021) \r\n",
     "sku_worker_matrix(15,9,2021) "
    ],
